<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:id="@+id/btnFormType"
            android:text="@string/payment_using_stripe_form_type"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btnLinkType"
            android:text="@string/payment_using_stripe_link_type"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tvUiElements"
            android:text="@string/stripe_payment_ui_elements"
            android:background="@color/black"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
        <com.stripe.android.view.CardFormView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtEmpheralKey"
            android:inputType="text"

            android:hint="@string/enter_client_secret_here"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtCustomerId"
            android:inputType="text"

            android:hint="Enter Client Id Here"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btnStripe"
            android:text="@string/pay_using_stripe"
            android:textAllCaps="false"

            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>