<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RazorPayActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtRazorOrderId"
                android:inputType="text"
                android:gravity="center"
                android:hint="Enter Order ID from RazorPay"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="match_parent"
                android:id="@+id/btnRazorPay"
                android:text="@string/razor_pay_payment"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tvPaymentStatus"
                android:background="@color/black"
                android:text="PAYMENT STATUS"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtRazorStatus"
                android:inputType="text"
                android:gravity="center"
                android:hint="@string/enter_order_id_to_check_status"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="match_parent"
                android:id="@+id/btnRazorPayOrderStatus"
                android:text="@string/check_order_status"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/tvOrderPaymentStatus"
                android:background="@color/black"
                android:text="PAST ORDERS PAYMENT STATUS"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </ScrollView>




</LinearLayout>